# wilson-education-sight-words

./: DEVELOPMENT_SETUP.md  HIGH_QUALITY_AUDIO_GUIDE.md  LICENSE  README.md  audio.js  game.js  generate_additional_audio.py  generate_audio_simple.py  generate_high_quality_audio.py  generate_word_stories_audio.py  index.html  progress.js  pyproject.toml  setup_audio.sh  styles.css  test_voice.py
